[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mcp_unhcrpyplot"
version = "0.1.0"
description = "MCP server for generating UNHCR charts using FastAPI chart service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "requests",
    "pydantic",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

# Points to your server function
[tool.smithery]
server = "mcp_unhcrpyplot.server:create_server"
